# datastream-py

./: .gitignore  README.md  pyproject.toml
datastream_py/: __init__.py  api.py
